--- a/src/main.css
+++ b/src/main.css
@@ -69,3 +69,9 @@ body {
     color:#dbd2d2;
     text-shadow: 0px -1px 1px #bdb5b4, 0px 1px 1px white;
 }
+
+.center {
+    position: absolute;
+    left 50%;
+    transform: translateX(-50%);
+}
