--- a/src/main.css
+++ b/src/main.css
@@ -3,6 +3,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 .password {
     background-color: #1a1c1d; 
