--- a/src/main.css
+++ b/src/main.css
@@ -1,8 +1,11 @@
 body {
     background-color: #333333;
-    display: flex;
     justify-content: center;
+    align-content: center;
     align-items: center;
+    text-align: center;
+    min-height: 100vh;
+    display: flex;
 }
 .password {
     background-color: #1a1c1d; 
@@ -69,3 +72,15 @@ body {
     color:#dbd2d2;
     text-shadow: 0px -1px 1px #bdb5b4, 0px 1px 1px white;
 }
+
+.button2:hover,
+.button2:focus {
+  box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
+  transform: translateY(-0.25em);
+}
+
+.button2 {
+  --color: #ffa260;
+  --hover: #e5ff60;
+}
+
