--- a/src/main.css
+++ b/src/main.css
@@ -72,21 +72,20 @@ body {
 
 .button2:hover,
 .button2:focus {
-  box-shadow: 0 0.5em 0.5em -0.4em var(--hover);
-  transform: translateY(-0.25em);
+	box-shadow: inset 6.5em 0 0 0 var(--hover);
 }
 
 .button2 {
-  --color: black;
-  --hover: gray;
+  	--color: white;
+  	--hover: gray;
 }
 
 button {
-  background: none;
-  border: 2px solid;
-  font: inherit;
-  line-height: 1;
-  margin: 0.5em;
-  padding: 1em 2em;
+  	background: none;
+	font: 300 1em 'Fira Sans', sans-serif;
+  	border: 2px solid;
+  	line-height: 1;
+  	margin: 0.5em;
+  	padding: 1em 2em;
 }
 
