--- a/src/main.css
+++ b/src/main.css
@@ -87,5 +87,12 @@ button {
   	line-height: 1;
   	margin: 0.5em;
   	padding: 1em 2em;
+	transition: 0.25s;
+  
+  	&:hover,
+  	&:focus { 
+    	border-color: var(--hover);
+    	color: #fff;
+  	}
 }
 
