--- a/src/main.css
+++ b/src/main.css
@@ -72,17 +72,18 @@ body {
 
 .button2:hover,
 .button2:focus {
-	box-shadow: inset 6.5em 0 0 0 var(--hover);
+	box-shadow: inset 3.5em 0 0 0 var(--hover);
 }
 
 .button2 {
-  	--color: white;
+	--color: white;
   	--hover: gray;
 }
 
 button {
   	background: none;
 	font: 300 1em 'Fira Sans', sans-serif;
+	color: #f9f9f9;
   	border: 2px solid;
   	line-height: 1;
   	margin: 0.5em;
@@ -92,7 +93,6 @@ button {
   	&:hover,
   	&:focus { 
     	border-color: var(--hover);
-    	color: #fff;
   	}
 }
 
